crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-10.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Ignore when svg's children are only <defs> -->\n    <defs>\n        <circle cx=\"100\" cy=\"100\" r=\"50\" id=\"circle\"/>\n        <ellipse cx=\"50\" cy=\"50\" rx=\"50\" ry=\"10\" id=\"ellipse\"/>\n        <rect x=\"100\" y=\"50\" width=\"50\" height=\"10\" id=\"rect\"/>\n    </defs>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Ignore when svg's children are only <defs> -->
    <defs>
        <circle cx="100" cy="100" r="50" id="circle"/>
        <ellipse cx="50" cy="50" rx="50" ry="10" id="ellipse"/>
        <rect x="100" y="50" width="50" height="10" id="rect"/>
    </defs>
</svg>
