crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-12.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {\n            \"force\": true,\n            \"preservePrefixes\": [\"pre1_\", \"pre2_\"]\n        } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 120 120\">\n    <!-- Prevent modification of preserved id prefixes, even in forced mode -->\n    <style>\n        svg .hidden { display: none; }\n        svg .hidden:target { display: inline; }\n    </style>\n    <circle id=\"pre1_circle\" class=\"hidden\" fill=\"red\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <rect id=\"pre2_rect\" class=\"hidden\" fill=\"blue\" x=\"10\" y=\"10\" width=\"100\" height=\"100\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120">
    <!-- Prevent modification of preserved id prefixes, even in forced mode -->
    <style>
        svg .hidden{display:none}svg .hidden:target{display:inline}
    </style>
    <circle id="pre1_circle" class="hidden" fill="red" cx="60" cy="60" r="50"/>
    <rect id="pre2_rect" class="hidden" fill="#00f" x="10" y="10" width="100" height="100"/>
</svg>
