crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-14.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {\n            \"preserve\": [\"circle\"],\n            \"preservePrefixes\": [\"suffix\", \"rect\"]\n        } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 230 120\">\n    <!-- Preserve both preserved names and prefixes -->\n    <circle id=\"circle\" fill=\"red\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <rect id=\"rect\" fill=\"blue\" x=\"120\" y=\"10\" width=\"100\" height=\"100\"/>\n    <view id=\"circle-suffix\" viewBox=\"0 0 120 120\"/>\n    <view id=\"rect-suffix\" viewBox=\"110 0 120 120\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 230 120">
    <!-- Preserve both preserved names and prefixes -->
    <circle id="circle" fill="red" cx="60" cy="60" r="50"/>
    <rect id="rect" fill="#00f" x="120" y="10" width="100" height="100"/>
    <view viewBox="0 0 120 120"/>
    <view id="rect-suffix" viewBox="110 0 120 120"/>
</svg>
