crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-17.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {\n            \"preservePrefixes\": [\"a\"]\n        } }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 230 120\">\n    <!-- Don't collide minification with preserved prefixes -->\n    <defs>\n        <circle id=\"abc\" fill=\"red\" cx=\"60\" cy=\"60\" r=\"50\"/>\n        <rect id=\"rect\" fill=\"blue\" x=\"120\" y=\"10\" width=\"100\" height=\"100\"/>\n    </defs>\n    <use href=\"#abc\"/>\n    <use href=\"#rect\"/>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 230 120">
    <!-- Don't collide minification with preserved prefixes -->
    <defs>
        <circle id="abc" fill="red" cx="60" cy="60" r="50"/>
        <rect id="a" fill="#00f" x="120" y="10" width="100" height="100"/>
    </defs>
    <use href="#abc"/>
    <use href="#a"/>
</svg>
