crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-2.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Ignore when <style> is present -->\n    <style>\n        .cls-1 { fill: #fff; }\n    </style>\n    <circle id=\"circle001\" fill=\"red\" cx=\"60\" cy=\"60\" r=\"50\"/>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Ignore when <style> is present -->
    <style>
        .cls-1{fill:#fff}
    </style>
    <circle id="circle001" fill="red" cx="60" cy="60" r="50"/>
</svg>
