crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_ids__cleanup_ids-25.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_ids.rs
expression: "test_config(r#\"{ \"cleanupIds\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Handle non-ascii and URI encoding correctly -->\n    <defs>\n        <linearGradient id=\"渐变_1\" x1=\"0%\" y1=\"0%\" x2=\"100%\" y2=\"0%\">\n            <stop stop-color=\"#5a2100\" />\n        </linearGradient>\n    </defs>\n    <rect x=\"30\" y=\"30\" height=\"150\" width=\"370\" fill=\"url(#渐变_1)\" />\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Handle non-ascii and URI encoding correctly -->
    <defs>
        <linearGradient id="a" x1="0%" y1="0%" x2="100%" y2="0%">
            <stop stop-color="#5a2100"/>
        </linearGradient>
    </defs>
    <rect x="30" y="30" height="150" width="370" fill="url(#a)"/>
</svg>
